# 15-team-service-ai

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  appspec.yml  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ai-cd.yml  ai-ci.yml  ai-docker-cd.yml  ai-docker-ci.yml
alloy/: config.alloy
app/: main.py
app/api/: routers.py  utils.py
app/api/schemas/: __init__.py  callback.py
app/api/v1/: resume.py
app/api/v1/schemas/: __init__.py  callback.py  resume.py
app/api/v2/: chat.py  feedback.py  interview.py  resume_edit.py  stt.py  utils.py
app/api/v2/schemas/: __init__.py  chat.py  feedback.py  interview.py  resume_edit.py  stt.py
app/core/: config.py  context.py  exceptions.py  logging.py  middleware.py
app/domain/interview/: agent.py  chat_agent.py  chat_schemas.py  chat_workflow.py  feedback_agent.py  feedback_schemas.py  feedback_workflow.py  schemas.py  store.py  workflow.py
app/domain/interview/prompts/: __init__.py  chat_templates.py  feedback_templates.py  templates.py
app/domain/resume/: agent.py  constants.py  edit_agent.py  edit_workflow.py  error_handler.py  parsers.py  prompts.py  schemas.py  service.py  tools.py  validators.py  workflow.py  workflow_utils.py
app/domain/resume/prompts/: __init__.py  agent.py  analysis.py  builder.py  edit.py  evaluation.py  finalization.py  generation.py  plan.py  positions.py
app/domain/resume/schemas/: __init__.py  base.py  edit.py  github.py  plan.py  tools.py
app/domain/stt/: service.py
app/infra/github/: client.py  mock_data.py
app/infra/langfuse/: prompt_manager.py
app/infra/llm/: __init__.py  base.py  chat.py  client.py  factory.py  feedback.py  gemini_client.py  interview.py  openai_client.py  resume.py  vllm_client.py
app/infra/qdrant/: client.py
app/infra/s3/: client.py
app/infra/stt/: client.py
app/infra/tavily/: client.py
scripts/: before_install.sh  render-env.sh  start_container.sh  start_container_staging.sh  stop_container.sh  upload_ssm_params.sh  validate_service.sh
tests/: conftest.py  mock_github.py  test_agent.py  test_callback_schemas.py  test_chat.py  test_error_handler.py  test_feedback_workflow.py  test_github_client.py  test_interview_api.py  test_interview_quality.py  test_interview_workflow.py  test_llm_client.py  test_main.py  test_parsers.py  test_prompt_content.py  test_prompt_manager.py  test_resume_api.py  test_resume_edit.py  test_schemas.py  test_service.py  test_startup.py  test_tools.py  test_workflow.py  test_workflow_utils.py
