[project]
name = "final-project"
version = "0.1.0"
description = "Final Project API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=1.0.6",
    "langfuse>=3.12.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C90"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/domain/resume/prompts/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]
