[project]
name = "final-project"
version = "0.1.0"
description = "Final Project API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langfuse>=3.12.0",
    "structlog>=24.1.0",
    "aioboto3>=13.0.0",
    "qdrant-client>=1.12.0",
    "google-genai>=1.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "protobuf==6.33.5",
    "tavily-python>=0.5.0",
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "langsmith>=0.3.0",
    "jsonref>=1.1.0",
    "orjson>=3.11.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["notebook/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C90"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/domain/resume/prompts/*.py" = ["E501"]
"app/domain/interview/prompts/*.py" = ["E501"]
"app/infra/github/mock_data.py" = ["E501"]
"app/infra/langfuse/prompt_manager.py" = ["I001"]
"app/main.py" = ["E402"]
"evals/*.py" = ["E402", "C901"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]
